feat:endpoint updated to fetching reagents by user id
